--- a/nosotros.html
+++ b/nosotros.html
@@ -13,38 +13,43 @@
 </head>
 
 <body>
-	<div class="">  
-		<div class="row">
-			<div class="contenedor col-lg-12 col-md-8 col-sm-4">
-				  <h1 class="TituloHome">KUTZ CONSTRUCCIONES</h1>
-		  </div>  
-		</div>
-  </div>
+
 
 		
-		<header class="container-fluid header col-lg-12 col-md-12 col-sm-12">
-			<ul class="row header__ul">
-				<div class="menuNav col d-flex justify-content-end d-flex align-items-center header__ul__menuNav">
-            		<div class="col d-flex justify-content-end d-flex align-items-center">
-                		<li class="header__ul__menuNav__li"><a class="header__ul__menuNav__li__a--otro" href="index.html">INICIO</a></li>   
-                		<li class="header__ul__menuNav__li"><a class="header__ul__menuNav__li__a--otro" href="obras.html">OBRAS</a></li>
-                		<li class="header__ul__menuNav__li"><a class="header__ul__menuNav__li__a--otro" href="contacto.html">CONTACTO</a></li>   
-                		<li class="header__ul__menuNav__li"><a class="header__ul__menuNav__li__a--otro" href="ubicacion.html">ZONA</a></li>             
-					</div>
-				</div>           
-        	</ul>
-    </header>
+
+	  <nav class="navbar navbar-light bg-light">
+		<a class="navbar-brand" href="#">
+		  <img src="img/logos/logo-kutz-square30x30.jpg" width="30" height="30" alt="" loading="lazy">
+		</a>
+		
+	  <ul class="nav justify-content-end">
+		<li class="nav-item">
+			<a class="nav-link" href="index.html">INICIO</a>
+		  </li>
+		  <li class="nav-item">
+			<a class="nav-link" href="obras.html">OBRAS</a>
+		  </li>
+		  <li class="nav-item">
+			  <a class="nav-link" href="contacto.html">CONTACTO</a>
+			</li>
+		</li>
+		</ul>
+	  </nav>
 		
 	
 	<div class="container">
-		<div class="row">
-			<div class="nosotros">
-				<div class="nosotrosLogo">
-					<img class="img-fluid" src="img/logos/LogoQS.png">
-				</div>
-	
-				<div class="nuestroTexto">
-					<h2>QUIENES SOMOS</h2>	
+	<div class="row">
+		<div class="nosotros">
+			<div class="nosotrosLogo">
+				<img class="img-fluid" src="img/logos/LogoQS.png">
+			</div>
+
+	<div class="card">
+		<div class="card-header">
+			<h2>QUIENES SOMOS</h2>
+		</div>
+		<div class="card-body">
+		  <blockquote class="blockquote mb-0">
 					<p>Somos una empresa especializada en la ejecucion de obras civiles particulares e industriales.
 					<br><br>
 					<em>Actualmente nos encontramos preparados para ejecutar obras civiles de todo tipo incluyendo obras de mediana y gran magnitud, 
@@ -58,7 +63,21 @@
 					una mejora continua permanente. Brindamos soluciones basadas en nuestra profesionalidad, recursos, experiencia, innovación y capacitación.<br><br>
 					Estamos comprometidos con la calidad de nuestro trabajo. Somos formales y cumplimos con nuestra  palabra.</span></p>
 					<br><br>
-					<h2>CUIDADO DEL MEDIO AMBIENTE</h2>
+					
+					<p>Creemo en el pragmatismo. Mejor que decir es hacer.
+					<br><br>
+					Y sabemos como.</p> 
+			
+		  </blockquote>
+		</div>
+	  </div>
+	  <div class="card">
+		<div class="card-header">
+			<h2>CUIDADO DEL MEDIO AMBIENTE</h2>
+		</div>
+		<div class="card-body">
+		  <blockquote class="blockquote mb-0">
+			
 					<p>Llevamos adelante nuestras obras protegiendo todos los recursos que interactúan y participan en las distintas fases de los 
 					procesos de construcción, previniendo situaciones que contaminen o dañen el medio ambiente, exigiendo a todos los involucrados 
 					llevar a cabo el desarrollo de las tareas acorde a esta norma y sin olvidar nuestra premisa: "Planificar, hacer, verificar y 
@@ -66,19 +85,22 @@
 					previendo la contaminación y protegiendo la naturaleza, dando cumplimiento a los requisitos legales aplicables junto a las 
 					exigencias de nuestros clientes, ya que contamos con los lineamientos de las normativas vigentes. <br><br>
 					Trabajamos en equipo, comunicados permanentemente. Compartimos nuestros conocimientos y habilidades de manera tal de obtener 
-					los mejores resultados para nuestros clientes.<br><br><br>	
-					Creemo en el pragmatismo. Mejor que decir es hacer.
-					<br><br>
-					Y sabemos como.</p> 
-				</div>	
-			</div>
-
-		
-
+					los mejores resultados para nuestros clientes.</p><br><br><br>	
+			
+		  </blockquote>
 		</div>
+	  </div>
+
+	  
+
+	</div>
 	</div>
 
-
+	<footer class="my-5 pt-5 text-muted text-center text-small">
+		<p class="mb-1">&copy; 2020 KUTZ Construcciones.</p>
+		<p class="mb-1">Designed by <a href="">ØNKEL</a> </p>
+		
+	  </footer>
 
 
 
