--- a/obras.html
+++ b/obras.html
@@ -15,80 +15,153 @@
 
 <body>
 	
-	<div class="">  
-		<div class="row">
-			<div class="contenedor col-lg-12 col-md-8 col-sm-4">
-				  <h1 class="TituloHome">KUTZ CONSTRUCCIONES</h1>
-		  </div>  
-		</div>
-  </div>
-
-	<header class="container-fluid header col-lg-12 col-md-12 col-sm-12">
-        <ul class="row header__ul">
-            <div class="menuNav col d-flex justify-content-end d-flex align-items-center header__ul__menuNav">
-                <li class="header__ul__menuNav__li"><a class="header__ul__menuNav__li__a--otro" href="index.html">INICIO</a></li>   
-                <li class="header__ul__menuNav__li"><a class="header__ul__menuNav__li__a--otro" href="quienes_somos.html">NOSOTROS</a></li>
-                <li class="header__ul__menuNav__li"><a class="header__ul__menuNav__li__a--otro" href="contacto.html">CONTACTO</a></li>   
-                <li class="header__ul__menuNav__li"><a class="header__ul__menuNav__li__a--otro" href="ubicacion.html">ZONA</a></li>             
-            </div>
-           
-        </ul>
-    </header>
+	
+	  
+	  <nav class="navbar navbar-light bg-light">
+		<a class="navbar-brand" href="#">
+		  <img src="img/logos/logo-kutz-square30x30.jpg" width="30" height="30" alt="" loading="lazy">
+		</a>
+		
+	  <ul class="nav justify-content-end">
+		<li class="nav-item">
+			<a class="nav-link" href="index.html">INICIO</a>
+		  </li>
+		  <li class="nav-item">
+			<a class="nav-link" href="nosotros.html">NOSOTROS</a>
+		  </li>
+		  <li class="nav-item">
+			  <a class="nav-link" href="contacto.html">CONTACTO</a>
+			</li>
+		</li>
+		</ul>
+	  </nav>
 
 <div class="container">
 <div class="row">
 	<div class="obras1">	
-	<a href="O-01-LR-L-102.html">		
-		<img class="img-fluid" src="img/galeria/L102-00.jpg" class="obrasGallery" alt="L-102" width="300" height="300" title="Obra LR/L-102">
-			</a>			
-				<a href="O-02-LR-L-152.html">
-					<img class="img-fluid" src="img/galeria/L152-00.jpg" class="obrasGallery" alt="L-152" width="300" height="300" title="Obra LR/L-152">
-						</a>				
-							<a href="O-03-SR-L-134.html">
-								<img class="img-fluid" src="img/galeria/L134-00.jpg" class="obrasGallery" alt="L-134" width="300" height="300" title="Obra SR/L-134">
-							</a> 
-						<a href="O-04-LR-L-170.html">
-					<img class="img-fluid" src="img/galeria/L170-00.jpg" class="obrasGallery" alt="L-170" width="300" height="300" title="Obra LR/L-170">
-				</a> 
+		<div class="row row-cols-1 row-cols-md-3">
+			<div class="col mb-4">
+			  <div class="card">
+				<a href="O-L-102.html">
+				<img src="img/galeria/L102-00.jpg" class="card-img-top" alt="..."></a>
+				<div class="card-body">
+				  <h5 class="card-title">OBRA L-102</h5>
+				  <p class="card-text">CLICK EN LA IMAGEN PARA ACCEDER A LA GALERIA.</p>
+				</div>
+			  </div>
+			</div>
+			<div class="col mb-4">
+			  <div class="card">
+				<a href="O-L-152.html">
+				<img src="img/galeria/L152-00.jpg" class="card-img-top" alt="..."></a>
+				<div class="card-body">
+				  <h5 class="card-title">OBRA L-152</h5>
+				  <p class="card-text">CLICK EN LA IMAGEN PARA ACCEDER A LA GALERIA.</p>
+				</div>
+			  </div>
+			</div>
+			<div class="col mb-4">
+			  <div class="card">
+				<a href="O-L-170.html">
+				<img src="img/galeria/L170-00.jpg" class="card-img-top" alt="..."></a>
+				<div class="card-body">
+				  <h5 class="card-title">OBRA L-170</h5>
+				  <p class="card-text">CLICK EN LA IMAGEN PARA ACCEDER A LA GALERIA.</p>
+				</div>
+			  </div>
+			</div>
+			<div class="col mb-4">
+			  <div class="card">
+				<a href="O-L-219.html">
+				<img src="img/galeria/L-219.jpg" class="card-img-top" alt="..."></a>
+				<div class="card-body">
+				  <h5 class="card-title">OBRA L-219</h5>
+				  <p class="card-text">CLICK EN LA IMAGEN PARA ACCEDER A LA GALERIA.</p>
+				</div>
+			  </div>
+			</div>
+			<div class="col mb-4">
+				<div class="card">
+				  <a href="O-L-134.html">
+				  <img src="img/galeria/L134-00.jpg" class="card-img-top" alt="..."></a>
+				  <div class="card-body">
+					<h5 class="card-title">OBRA L-134</h5>
+					<p class="card-text">CLICK EN LA IMAGEN PARA ACCEDER A LA GALERIA.</p>
+				  </div>
+				</div>
+			  </div>
+		  </div>
+		 
+		  <div class="row row-cols-1 row-cols-md-3">
+			<div class="col mb-4">
+			  <div class="card">
+				<a href="O-GR-01.html">
+				<img src="img/galeria/RG.jpg" class="card-img-top" alt="..."></a>
+				<div class="card-body">
+				  <h5 class="card-title">OBRA RG-01</h5>
+				  <p class="card-text">CLICK EN LA IMAGEN PARA ACCEDER A LA GALERIA.</p>
+				</div>
+			  </div>
+			</div>
+			<div class="col mb-4">
+			  <div class="card">
+				<a href="O-G-01.html">
+				<img src="img/galeria/Gauna00.jpg" class="card-img-top" alt="..."></a>
+				<div class="card-body">
+				  <h5 class="card-title">OBRA GAUNA</h5>
+				  <p class="card-text">CLICK EN LA IMAGEN PARA ACCEDER A LA GALERIA.</p>
+				</div>
+			  </div>
+			</div>
+			<div class="col mb-4">
+			  <div class="card">
+				<a href="O-L-23.html">
+				<img src="img/galeria/VZ-00.jpg" class="card-img-top" alt="..."></a>
+				<div class="card-body">
+				  <h5 class="card-title">OBRA VZ L-23</h5>
+				  <p class="card-text">CLICK EN LA IMAGEN PARA ACCEDER A LA GALERIA.</p>
+				</div>
+			  </div>
+			</div>
+			<div class="col mb-4">
+			  <div class="card">
+				<a href="O-L-160.html">
+				<img src="img/galeria/L-160.jpg" class="card-img-top" alt="..."></a>
+				<div class="card-body">
+				  <h5 class="card-title">OBRA L-160</h5>
+				  <p class="card-text"> <span> CLICK EN LA IMAGEN PARA ACCEDER A LA GALERIA.</span></p>
+				</div>
+			  </div>
+			</div>
+			<div class="col mb-4">
+				<div class="card">
+				  <a href="O-L-147.html">
+				  <img src="img/galeria/L-147.jpg" class="card-img-top" alt="..."></a>
+				  <div class="card-body">
+					<h5 class="card-title">OBRA L-147</h5>
+					<p class="card-text"> <span> CLICK EN LA IMAGEN PARA ACCEDER A LA GALERIA.</span></p>
+				  </div>
+				</div>
+			  </div>
 
-			<a href="O-05-SR-L-219.html">
-		<img class="img-fluid" src="img/galeria/L-219.jpg" class="obrasGallery" alt="L-219" width="300" height="300" title="Obra SR/L-219">
-	</a>
+			
+		  </div>
+</div>
 </div>
 
-<div class="obras1">
-	<a href="O-06-LP-GR-01.html">
-		<img class="img-fluid" src="img/galeria/RG.jpg" class="obrasGallery" alt="RG" width="300" height="300" title="Obra LP/GR-01">
-			</a>
-
-				<a href="O-07-VB-G-01.html">
-					<img class="img-fluid" src="img/galeria/Gauna00.jpg" class="obrasGallery" alt="Gauna" width="300" height="300" title="Obra VB/G-01"> 
-						</a>
-
-							<a href="O-08-VZ-L-23.html">
-								<img class="img-fluid" src="img/galeria/VZ-00.jpg" class="obrasGallery" alt="VZ" width="300" height="300" title="Obra VZ/L-23">
-							</a> 
-
-						<a href="O-09-SR-L-160.html">
-					<img class="img-fluid" src="img/galeria/L-160.jpg" class="obrasGallery" alt="L-160" width="300" height="300" title="Obra SR/L-160"> 
-				</a>
-
-			<a href="O-10-LR-L-147.html">
-		<img class="img-fluid" src="img/galeria/L-147.jpg" class="obrasGallery" alt="L-147" width="300" height="300" title="Obra LR/L-147"> 
-	</a>
-</div>
-</div>
-</div>
 
 
+<footer class="my-5 pt-5 text-muted text-center text-small">
+	<p class="mb-1">&copy; 2020 KUTZ Construcciones.</p>
+	<p class="mb-1">Designed by <a href="">ØNKEL</a> </p>
+	
+  </footer>
 
-<div class="container">
-	<footer class="container-fluid2 col-lg-12 col-md-12 col-sm-12">                    
-		   <div class="d-flex align-items-end">                                        
-			 <li><p><span>Created by <a href="#"> |Onkel| </a> Kutz ©Copyright 2020</span></p></li>
-		   </div>        
-	</footer>
-</div>
+
+<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
+
 
 </body>
 </html>
