--- a/O-G-01.html
+++ b/O-G-01.html
@@ -85,13 +85,11 @@
 
 
 
-	<div class="container">
-		<footer class="container-fluid2 col-lg-12 col-md-12 col-sm-12">                    
-			   <div class="d-flex align-items-end">                                        
-				 <li><p><span>Created by <a href="#"> |Onkel| </a> Kutz ©Copyright 2020</span></p></li>
-			   </div>        
-		</footer>
-	</div>
+	<footer class="my-5 pt-5 text-muted text-center text-small">
+		<p class="mb-1">&copy; 2020 KUTZ Construcciones.</p>
+		<p class="mb-1">Designed by <a href="">ØNKEL</a> </p>
+		
+	  </footer>
 	
 	<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
 	<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
