--- a/O-GR-01.html
+++ b/O-GR-01.html
@@ -11,14 +11,14 @@
 	<link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@100&display=swap" rel="stylesheet">
 </head>
 <body>
-		<div>
+	<div>
 			<h1 class="TituloHome">KUTZ CONSTRUCCIONES</h1>
 		</div>
-			
-
+		
 	<div class="container">
 	<div class="row">
 
+	
 	<div class="gallery">
 		<div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel">
 			<ol class="carousel-indicators">
@@ -29,30 +29,30 @@
 			</ol>
 			<div class="carousel-inner">
 			  <div class="carousel-item active">
-				<img class="img-fluid" src="img/galeria/O-04-LR-L-170/L170-00 1500x800.jpg" class="d-block w-100" alt="...">
+				<img src="img/galeria/O-06-LP-GR-01/GR-00 1500x800.jpg" class="d-block w-100" alt="...">
 				<div class="carousel-caption d-none d-md-block">
-				  <h5>OBRA: LOS ROBLES L-170</h5>
+				  <h5>OBRA LOS PATRICIOS L-01</h5>
+				  <h6>SAN ISIDRO, BUENOS AIRES.</h6>
+				</div>
+			  </div>
+			  <div class="carousel-item">
+				<img class="img-fluid" src="img/galeria/O-06-LP-GR-01/GR-01 1500x800.jpg" class="d-block w-100" alt="...">
+				<div class="carousel-caption d-none d-md-block">
+				  <h5>OBRA LOS PATRICIOS L-01</h5>
+				  <h6>SAN ISIDRO, BUENOS AIRES.</h6>
+				</div>
+			  </div>
+			  <div class="carousel-item">
+				<img class="img-fluid" src="img/galeria/O-06-LP-GR-01/GR-02 1500x800.jpg" class="d-block w-100" alt="...">
+				<div class="carousel-caption d-none d-md-block">
+				  <h5>OBRA LOS PATRICIOS L-01</h5>
 				  <h6>PILAR, BUENOS AIRES.</h6>
 				</div>
 			  </div>
 			  <div class="carousel-item">
-				<img class="img-fluid" src="img/galeria/O-04-LR-L-170/L170-01 1500x800.jpg" class="d-block w-100" alt="...">
+				<img class="img-fluid" src="img/galeria/O-06-LP-GR-01/GR-03 1500x800.jpg" class="d-block w-100" alt="...">
 				<div class="carousel-caption d-none d-md-block">
-				  <h5>OBRA LOS ROBLES L-170</h5>
-				  <h6>PILAR, BUENOS AIRES.</h6>
-				</div>
-			  </div>
-			  <div class="carousel-item">
-				<img class="img-fluid" src="img/galeria/O-04-LR-L-170/L170-02 1500x800.jpg" class="d-block w-100" alt="...">
-				<div class="carousel-caption d-none d-md-block">
-				  <h5>OBRA LOS ROBLES L-170</h5>
-				  <h6>PILAR, BUENOS AIRES.</h6>
-				</div>
-			  </div>
-			  <div class="carousel-item">
-				<img class="img-fluid" src="img/galeria/O-04-LR-L-170/L170-03 1500x800.jpg" class="d-block w-100" alt="...">
-				<div class="carousel-caption d-none d-md-block">
-				  <h5>OBRA LOS ROBLES L-170</h5>
+				  <h5>OBRA LOS PATRICIOS L-01</h5>
 				  <h6>PILAR, BUENOS AIRES.</h6>
 				</div>
 			  </div>
@@ -65,11 +65,12 @@
 			  <span class="carousel-control-next-icon" aria-hidden="true"></span>
 			  <span class="sr-only">Next</span>
 			</a>
-		  </div>		
+		  </div>
+		
 	</div>
 	
-	</div>
-	</div>
+</div>
+</div>
 
 
 	<header class="container-fluid">
@@ -81,22 +82,20 @@
 		   
 		</ul>
 	</header>
-<br>
+	
 
 
 
 
-<div class="container">
-	<footer class="container-fluid2 col-lg-12 col-md-12 col-sm-12">                    
-		   <div class="d-flex align-items-end">                                        
-			 <li><p><span>Created by <a href="#"> |Onkel| </a> Kutz ©Copyright 2020</span></p></li>
-		   </div>        
-	</footer>
-</div>
+	<footer class="my-5 pt-5 text-muted text-center text-small">
+		<p class="mb-1">&copy; 2020 KUTZ Construcciones.</p>
+		<p class="mb-1">Designed by <a href="">ØNKEL</a> </p>
+		
+	  </footer>
 
-<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
-
+	<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+	<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
+	
 </body>
 </html>
