--- a/O-L-102.html
+++ b/O-L-102.html
@@ -11,14 +11,17 @@
 	<link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@100&display=swap" rel="stylesheet">
 </head>
 <body>
-	<div>
+		<div>
 			<h1 class="TituloHome">KUTZ CONSTRUCCIONES</h1>
 		</div>
-		<br><br>
+		<br>
 
-	<div class="container">
+		
+
+		
+	<div class="container">	
 	<div class="row">
-	
+
 	<div class="gallery">
 		<div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel">
 			<ol class="carousel-indicators">
@@ -29,30 +32,30 @@
 			</ol>
 			<div class="carousel-inner">
 			  <div class="carousel-item active">
-				<img class="img-fluid" src="img/galeria/O-02-LR-L-152/L152-00 1500x800.jpg" class="d-block w-100" alt="...">
+				<img class="img-fluid" src="img/galeria/O-01-LR-L-102/L102-00 1500x800.jpg" class="d-block w-100" alt="...">
 				<div class="carousel-caption d-none d-md-block">
-				  <h5>OBRA LOS ROBLES L-152</h5>
+				  <h5>OBRA LOS ROBLES L-102</h5>
 				  <h6>PILAR, BUENOS AIRES.</h6>
 				</div>
 			  </div>
 			  <div class="carousel-item">
-				<img class="img-fluid" src="img/galeria/O-02-LR-L-152/L152-01 1500x800.jpg" class="d-block w-100" alt="...">
+				<img class="img-fluid" src="img/galeria/O-01-LR-L-102/L102-01 1500x800.jpg" class="d-block w-100" alt="...">
 				<div class="carousel-caption d-none d-md-block">
-				  <h5>OBRA LOS ROBLES L-152</h5>
+				  <h5>OBRA LOS ROBLES L-102</h5>
 				  <h6>PILAR, BUENOS AIRES.</h6>
 				</div>
 			  </div>
 			  <div class="carousel-item">
-				<img class="img-fluid" src="img/galeria/O-02-LR-L-152/L152-02 1500x800.jpg" class="d-block w-100" alt="...">
+				<img class="img-fluid" src="img/galeria/O-01-LR-L-102/L102-02 1500x800.jpg" class="d-block w-100" alt="...">
 				<div class="carousel-caption d-none d-md-block">
-				  <h5>OBRA LOS ROBLES L-152</h5>
+				  <h5>OBRA LOS ROBLES L-102</h5>
 				  <h6>PILAR, BUENOS AIRES.</h6>
 				</div>
 			  </div>
 			  <div class="carousel-item">
-				<img class="img-fluid" src="img/galeria/O-02-LR-L-152/L152-03 1500x800.jpg" class="d-block w-100" alt="...">
+				<img class="img-fluid" src="img/galeria/O-01-LR-L-102/L102-03 1500x800.jpg" class="d-block w-100" alt="...">
 				<div class="carousel-caption d-none d-md-block">
-				  <h5>OBRA LOS ROBLES L-152</h5>
+				  <h5>OBRA LOS ROBLES L-102</h5>
 				  <h6>PILAR, BUENOS AIRES.</h6>
 				</div>
 			  </div>
@@ -65,35 +68,33 @@
 			  <span class="carousel-control-next-icon" aria-hidden="true"></span>
 			  <span class="sr-only">Next</span>
 			</a>
-		  </div>		
+		  </div>
+
+		
 	</div>
 
-</div>	
+</div>
 </div>
 
 
 	<header class="container-fluid">
 		<ul class="row">
 			<div class="col d-flex justify-content-center d-flex align-items-center">
-				<li><a class="volver" href="obras.html">VOLVER</a></li>   
+				<li><a class="volver" href="obras.html">VOLVER</a></li>  
 							 
 			</div>
 		   
 		</ul>
 	</header>
-	<br>
+
+<br>
 
 
-
-
-
-	<div class="container">
-		<footer class="container-fluid2 col-lg-12 col-md-12 col-sm-12">                    
-			   <div class="d-flex align-items-end">                                        
-				 <li><p><span>Created by <a href="#"> |Onkel| </a> Kutz ©Copyright 2020</span></p></li>
-			   </div>        
-		</footer>
-	</div>
+<footer class="my-5 pt-5 text-muted text-center text-small">
+	<p class="mb-1">&copy; 2020 KUTZ Construcciones.</p>
+	<p class="mb-1">Designed by <a href="">ØNKEL</a> </p>
+	
+  </footer>
 	
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
