--- a/O-L-147.html
+++ b/O-L-147.html
@@ -5,7 +5,6 @@
 <head>
 	<title>Kutz Construcciones</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 	<link rel="icon" href="img/logo.ico">
@@ -18,7 +17,7 @@
 		
 	<div class="container">
 	<div class="row">
-	
+
 	<div class="gallery">
 		<div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel">
 			<ol class="carousel-indicators">
@@ -29,31 +28,31 @@
 			</ol>
 			<div class="carousel-inner">
 			  <div class="carousel-item active">
-				<img class="img-fluid" src="img/galeria/O-08-VZ-L-23/VZL23-00 1500x800.jpg" class="d-block w-100" alt="...">
+				<img class="img-fluid" src="img/galeria/O-10-LR-L-147/L147-00 1500x800.jpg" class="d-block w-100" alt="...">
 				<div class="carousel-caption d-none d-md-block">
-				  <h5>OBRA: VALDEVEZ L-23</h5>
-				  <h6>EZEIZA, BUENOS AIRES.</h6>
+				  <h5>OBRA: LOS ROBLES L-147</h5>
+				  <h6>PILAR, BUENOS AIRES.</h6>
 				</div>
 			  </div>
 			  <div class="carousel-item">
-				<img class="img-fluid" src="img/galeria/O-08-VZ-L-23/VZL23-01 1500x800.jpg" class="d-block w-100" alt="...">
+				<img class="img-fluid" src="img/galeria/O-10-LR-L-147/L147-01 1500x800.jpg" class="d-block w-100" alt="...">
 				<div class="carousel-caption d-none d-md-block">
-				  <h5>OBRA VALDEVEZ L-23</h5>
-				  <h6>EZEIZA, BUENOS AIRES.</h6>
+				  <h5>OBRA LOS ROBLES L-147</h5>
+				  <h6>PILAR, BUENOS AIRES.</h6>
 				</div>
 			  </div>
 			  <div class="carousel-item">
-				<img class="img-fluid" src="img/galeria/O-08-VZ-L-23/VZL23-02 1500x800.jpg" class="d-block w-100" alt="...">
+				<img class="img-fluid" src="img/galeria/O-10-LR-L-147/L147-02 1500x800.jpg" class="d-block w-100" alt="...">
 				<div class="carousel-caption d-none d-md-block">
-				  <h5>OBRA VALDEVEZ L-23</h5>
-				  <h6>EZEIZA, BUENOS AIRES.</h6>
+				  <h5>OBRA LOS ROBLES L-147</h5>
+				  <h6>PILAR, BUENOS AIRES.</h6>
 				</div>
 			  </div>
 			  <div class="carousel-item">
-				<img class="img-fluid" src="img/galeria/O-08-VZ-L-23/VZL23-03 1500x800.jpg" class="d-block w-100" alt="...">
+				<img class="img-fluid" src="img/galeria/O-10-LR-L-147/L147-03 1500x800.jpg" class="d-block w-100" alt="...">
 				<div class="carousel-caption d-none d-md-block">
-				  <h5>OBRA VALDEVEZ L-23</h5>
-				  <h6>EZEIZA, BUENOS AIRES.</h6>
+				  <h5>OBRA LOS ROBLES L-219</h5>
+				  <h6>PILAR, BUENOS AIRES.</h6>
 				</div>
 			  </div>
 			</div>
@@ -67,10 +66,10 @@
 			</a>
 		  </div>		
 	</div>
+
 	
 </div>
 </div>
-
 
 	<header class="container-fluid">
 		<ul class="row">
@@ -86,13 +85,11 @@
 
 
 
-		<div class="container">
-			<footer class="container-fluid2 col-lg-12 col-md-12 col-sm-12">                    
-				   <div class="d-flex align-items-end">                                        
-					 <li><p><span>Created by <a href="#"> |Onkel| </a> Kutz ©Copyright 2020</span></p></li>
-				   </div>        
-			</footer>
-		</div>	
+		<footer class="my-5 pt-5 text-muted text-center text-small">
+			<p class="mb-1">&copy; 2020 KUTZ Construcciones.</p>
+			<p class="mb-1">Designed by <a href="">ØNKEL</a> </p>
+			
+		  </footer>	
 		
 	<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
 	<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
