--- a/O-L-160.html
+++ b/O-L-160.html
@@ -28,30 +28,30 @@
 			</ol>
 			<div class="carousel-inner">
 			  <div class="carousel-item active">
-				<img class="img-fluid" src="img/galeria/O-10-LR-L-147/L147-00 1500x800.jpg" class="d-block w-100" alt="...">
+				<img class="img-fluid" src="img/galeria/O-09-SR-L-160/L160-00 1500x800.jpg" class="d-block w-100" alt="...">
 				<div class="carousel-caption d-none d-md-block">
-				  <h5>OBRA: LOS ROBLES L-147</h5>
+				  <h5>OBRA: SAN RAMIRO L-160</h5>
 				  <h6>PILAR, BUENOS AIRES.</h6>
 				</div>
 			  </div>
 			  <div class="carousel-item">
-				<img class="img-fluid" src="img/galeria/O-10-LR-L-147/L147-01 1500x800.jpg" class="d-block w-100" alt="...">
+				<img class="img-fluid" src="img/galeria/O-09-SR-L-160/L160-01 1500x800.jpg" class="d-block w-100" alt="...">
 				<div class="carousel-caption d-none d-md-block">
-				  <h5>OBRA LOS ROBLES L-147</h5>
+				  <h5>OBRA SAN RAMIRO L-160</h5>
 				  <h6>PILAR, BUENOS AIRES.</h6>
 				</div>
 			  </div>
 			  <div class="carousel-item">
-				<img class="img-fluid" src="img/galeria/O-10-LR-L-147/L147-02 1500x800.jpg" class="d-block w-100" alt="...">
+				<img class="img-fluid" src="img/galeria/O-09-SR-L-160/L160-02 1500x800.jpg" class="d-block w-100" alt="...">
 				<div class="carousel-caption d-none d-md-block">
-				  <h5>OBRA LOS ROBLES L-147</h5>
+				  <h5>OBRA SAN RAMIRO L-160</h5>
 				  <h6>PILAR, BUENOS AIRES.</h6>
 				</div>
 			  </div>
 			  <div class="carousel-item">
-				<img class="img-fluid" src="img/galeria/O-10-LR-L-147/L147-03 1500x800.jpg" class="d-block w-100" alt="...">
+				<img class="img-fluid" src="img/galeria/O-09-SR-L-160/L160-03 1500x800.jpg" class="d-block w-100" alt="...">
 				<div class="carousel-caption d-none d-md-block">
-				  <h5>OBRA LOS ROBLES L-219</h5>
+				  <h5>OBRA SAN RAMIRO L-219</h5>
 				  <h6>PILAR, BUENOS AIRES.</h6>
 				</div>
 			  </div>
@@ -66,8 +66,8 @@
 			</a>
 		  </div>		
 	</div>
-
 	
+
 </div>
 </div>
 
@@ -85,13 +85,11 @@
 
 
 
-		<div class="container">
-			<footer class="container-fluid2 col-lg-12 col-md-12 col-sm-12">                    
-				   <div class="d-flex align-items-end">                                        
-					 <li><p><span>Created by <a href="#"> |Onkel| </a> Kutz ©Copyright 2020</span></p></li>
-				   </div>        
-			</footer>
-		</div>	
+		<footer class="my-5 pt-5 text-muted text-center text-small">
+			<p class="mb-1">&copy; 2020 KUTZ Construcciones.</p>
+			<p class="mb-1">Designed by <a href="">ØNKEL</a> </p>
+			
+		  </footer>
 		
 	<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
 	<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
