--- a/O-L-170.html
+++ b/O-L-170.html
@@ -14,9 +14,10 @@
 		<div>
 			<h1 class="TituloHome">KUTZ CONSTRUCCIONES</h1>
 		</div>
-	
+			
+
 	<div class="container">
-		<div class="row">
+	<div class="row">
 
 	<div class="gallery">
 		<div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel">
@@ -28,30 +29,30 @@
 			</ol>
 			<div class="carousel-inner">
 			  <div class="carousel-item active">
-				<img class="img-fluid" src="img/galeria/O-03-SR-L-134/L134-00 1500x800.jpg" class="d-block w-100" alt="...">
+				<img class="img-fluid" src="img/galeria/O-04-LR-L-170/L170-00 1500x800.jpg" class="d-block w-100" alt="...">
 				<div class="carousel-caption d-none d-md-block">
-				  <h5>OBRA: SAN RAMIRO L-134</h5>
+				  <h5>OBRA: LOS ROBLES L-170</h5>
 				  <h6>PILAR, BUENOS AIRES.</h6>
 				</div>
 			  </div>
 			  <div class="carousel-item">
-				<img class="img-fluid" src="img/galeria/O-03-SR-L-134/L134-01 1500x800.jpg" class="d-block w-100" alt="...">
+				<img class="img-fluid" src="img/galeria/O-04-LR-L-170/L170-01 1500x800.jpg" class="d-block w-100" alt="...">
 				<div class="carousel-caption d-none d-md-block">
-				  <h5>OBRA SAN RAMIRO L-134</h5>
+				  <h5>OBRA LOS ROBLES L-170</h5>
 				  <h6>PILAR, BUENOS AIRES.</h6>
 				</div>
 			  </div>
 			  <div class="carousel-item">
-				<img class="img-fluid" src="img/galeria/O-03-SR-L-134/L134-02 1500x800.jpg" class="d-block w-100" alt="...">
+				<img class="img-fluid" src="img/galeria/O-04-LR-L-170/L170-02 1500x800.jpg" class="d-block w-100" alt="...">
 				<div class="carousel-caption d-none d-md-block">
-				  <h5>OBRA SAN RAMIRO L-134</h5>
+				  <h5>OBRA LOS ROBLES L-170</h5>
 				  <h6>PILAR, BUENOS AIRES.</h6>
 				</div>
 			  </div>
 			  <div class="carousel-item">
-				<img class="img-fluid" src="img/galeria/O-03-SR-L-134/L134-03 1500x800.jpg" class="d-block w-100" alt="...">
+				<img class="img-fluid" src="img/galeria/O-04-LR-L-170/L170-03 1500x800.jpg" class="d-block w-100" alt="...">
 				<div class="carousel-caption d-none d-md-block">
-				  <h5>OBRA SAN RAMIRO L-134</h5>
+				  <h5>OBRA LOS ROBLES L-170</h5>
 				  <h6>PILAR, BUENOS AIRES.</h6>
 				</div>
 			  </div>
@@ -67,8 +68,8 @@
 		  </div>		
 	</div>
 	
-</div>
-</div>
+	</div>
+	</div>
 
 
 	<header class="container-fluid">
@@ -85,13 +86,11 @@
 
 
 
-<div class="container">
-	<footer class="container-fluid2 col-lg-12 col-md-12 col-sm-12">                    
-		   <div class="d-flex align-items-end">                                        
-			 <li><p><span>Created by <a href="#"> |Onkel| </a> Kutz ©Copyright 2020</span></p></li>
-		   </div>        
-	</footer>
-</div>			
+<footer class="my-5 pt-5 text-muted text-center text-small">
+	<p class="mb-1">&copy; 2020 KUTZ Construcciones.</p>
+	<p class="mb-1">Designed by <a href="">ØNKEL</a> </p>
+	
+  </footer>
 
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
