--- a/O-L-23.html
+++ b/O-L-23.html
@@ -5,6 +5,7 @@
 <head>
 	<title>Kutz Construcciones</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 	<link rel="icon" href="img/logo.ico">
@@ -17,7 +18,6 @@
 		
 	<div class="container">
 	<div class="row">
-
 	
 	<div class="gallery">
 		<div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel">
@@ -29,31 +29,31 @@
 			</ol>
 			<div class="carousel-inner">
 			  <div class="carousel-item active">
-				<img src="img/galeria/O-06-LP-GR-01/GR-00 1500x800.jpg" class="d-block w-100" alt="...">
+				<img class="img-fluid" src="img/galeria/O-08-VZ-L-23/VZL23-00 1500x800.jpg" class="d-block w-100" alt="...">
 				<div class="carousel-caption d-none d-md-block">
-				  <h5>OBRA LOS PATRICIOS L-01</h5>
-				  <h6>SAN ISIDRO, BUENOS AIRES.</h6>
+				  <h5>OBRA: VALDEVEZ L-23</h5>
+				  <h6>EZEIZA, BUENOS AIRES.</h6>
 				</div>
 			  </div>
 			  <div class="carousel-item">
-				<img class="img-fluid" src="img/galeria/O-06-LP-GR-01/GR-01 1500x800.jpg" class="d-block w-100" alt="...">
+				<img class="img-fluid" src="img/galeria/O-08-VZ-L-23/VZL23-01 1500x800.jpg" class="d-block w-100" alt="...">
 				<div class="carousel-caption d-none d-md-block">
-				  <h5>OBRA LOS PATRICIOS L-01</h5>
-				  <h6>SAN ISIDRO, BUENOS AIRES.</h6>
+				  <h5>OBRA VALDEVEZ L-23</h5>
+				  <h6>EZEIZA, BUENOS AIRES.</h6>
 				</div>
 			  </div>
 			  <div class="carousel-item">
-				<img class="img-fluid" src="img/galeria/O-06-LP-GR-01/GR-02 1500x800.jpg" class="d-block w-100" alt="...">
+				<img class="img-fluid" src="img/galeria/O-08-VZ-L-23/VZL23-02 1500x800.jpg" class="d-block w-100" alt="...">
 				<div class="carousel-caption d-none d-md-block">
-				  <h5>OBRA LOS PATRICIOS L-01</h5>
-				  <h6>PILAR, BUENOS AIRES.</h6>
+				  <h5>OBRA VALDEVEZ L-23</h5>
+				  <h6>EZEIZA, BUENOS AIRES.</h6>
 				</div>
 			  </div>
 			  <div class="carousel-item">
-				<img class="img-fluid" src="img/galeria/O-06-LP-GR-01/GR-03 1500x800.jpg" class="d-block w-100" alt="...">
+				<img class="img-fluid" src="img/galeria/O-08-VZ-L-23/VZL23-03 1500x800.jpg" class="d-block w-100" alt="...">
 				<div class="carousel-caption d-none d-md-block">
-				  <h5>OBRA LOS PATRICIOS L-01</h5>
-				  <h6>PILAR, BUENOS AIRES.</h6>
+				  <h5>OBRA VALDEVEZ L-23</h5>
+				  <h6>EZEIZA, BUENOS AIRES.</h6>
 				</div>
 			  </div>
 			</div>
@@ -65,8 +65,7 @@
 			  <span class="carousel-control-next-icon" aria-hidden="true"></span>
 			  <span class="sr-only">Next</span>
 			</a>
-		  </div>
-		
+		  </div>		
 	</div>
 	
 </div>
@@ -82,22 +81,21 @@
 		   
 		</ul>
 	</header>
-	<br>
+		<br>
 
 
 
 
-	<div class="container">
-		<footer class="container-fluid2 col-lg-12 col-md-12 col-sm-12">                    
-			   <div class="d-flex align-items-end">                                        
-				 <li><p><span>Created by <a href="#"> |Onkel| </a> Kutz ©Copyright 2020</span></p></li>
-			   </div>        
-		</footer>
-	</div>
-
+		<footer class="my-5 pt-5 text-muted text-center text-small">
+			<p class="mb-1">&copy; 2020 KUTZ Construcciones.</p>
+			<p class="mb-1">Designed by <a href="">ØNKEL</a> </p>
+			
+		  </footer>	
+		
 	<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
 	<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
 	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
 	
+
 </body>
 </html>
