--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                 <div class="card-body">
                   <h5 class="card-title">ESTRUCTURAS DE HORMIGON ARMADO</h5>
                   <p class="card-text">Somos especialistas en ejecucion de estructuras de hormigon armado de gran envergadura.</p>
-                  <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                  <p class="card-text"><small class="text-muted"></small></p>
                 </div>
               </div>
               <div class="card">
@@ -102,7 +102,7 @@
                 <div class="card-body">
                   <h5 class="card-title">DEMOLICIONES</h5>
                   <p class="card-text">Actualmente contamos con todos los equipos, herramientas y personal idoneo para encarar todo tipo de demoliciones.</p>
-                  <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                  <p class="card-text"><small class="text-muted"></small></p>
                 </div>
               </div>
               <div class="card">
@@ -110,7 +110,7 @@
                 <div class="card-body">
                   <h5 class="card-title">OBJETIVO</h5>
                   <p class="card-text">Nuestro principal objetivo es brindarle a cada cliente la solucion constructiva a su medida.</p>
-                  <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                  <p class="card-text"><small class="text-muted"></small></p>
                 </div>
               </div>
             </div>
