--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
               <div class="card">
                 <img src="img/home/demolicion.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
-                  <h5 class="card-title">DEMOLICIONES</h5>
+                  <h5 class="card-title">DEMOLICIONES.</h5>
                   <p class="card-text">Actualmente contamos con todos los equipos, herramientas y personal idoneo para encarar todo tipo de demoliciones.</p>
                   <p class="card-text"><small class="text-muted"></small></p>
                 </div>
@@ -108,7 +108,7 @@
               <div class="card">
                 <img src="img/home/gruas.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
-                  <h5 class="card-title">OBJETIVO</h5>
+                  <h5 class="card-title">OBJETIVO.</h5>
                   <p class="card-text">Nuestro principal objetivo es brindarle a cada cliente la solucion constructiva a su medida.</p>
                   <p class="card-text"><small class="text-muted"></small></p>
                 </div>
