--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
           
             <div class="card-deck">
               <div class="card">
-                <img src="img/home/estructura.jpg" class="card-img-top" alt="...">
+                <img src="img/home/estructura.jpg" class="card-img-top" alt="hormigon armado">
                 <div class="card-body">
                   <h5 class="card-title">ESTRUCTURAS DE HORMIGON ARMADO</h5>
                   <p class="card-text">Somos especialistas en ejecucion de estructuras de hormigon armado de gran envergadura.</p>
@@ -98,7 +98,7 @@
                 </div>
               </div>
               <div class="card">
-                <img src="img/home/demolicion.jpg" class="card-img-top" alt="...">
+                <img src="img/home/demolicion.JPG" class="card-img-top" alt="demoliciones">
                 <div class="card-body">
                   <h5 class="card-title">DEMOLICIONES.</h5>
                   <p class="card-text">Actualmente contamos con todos los equipos, herramientas y personal idoneo para encarar todo tipo de demoliciones.</p>
@@ -106,7 +106,7 @@
                 </div>
               </div>
               <div class="card">
-                <img src="img/home/gruas.jpg" class="card-img-top" alt="...">
+                <img src="img/home/gruas.JPG" class="card-img-top" alt="objetivo">
                 <div class="card-body">
                   <h5 class="card-title">OBJETIVO.</h5>
                   <p class="card-text">Nuestro principal objetivo es brindarle a cada cliente la solucion constructiva a su medida.</p>
