--- a/obras.html
+++ b/obras.html
@@ -18,8 +18,8 @@
 	
 	  
 	  <nav class="navbar navbar-light bg-light">
-		<a class="navbar-brand" href="#">
-		  <img src="img/logos/logo-kutz-square30x30.jpg" width="30" height="30" alt="" loading="lazy">
+		<a class="navbar-brand" href="https://www.instagram.com/kutz.construcciones/" target="_blank">
+		  <img src="img/logos/logo-kutz-square30x30.jpg" width="" height="" alt="" loading="lazy">
 		</a>
 		
 	  <ul class="nav justify-content-end">
