--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
 	<link rel="stylesheet" type="text/css" href="css/style.css">
-	<link rel="icon" href="img/logo.ico">
+  <link rel="icon" href="img/logo.ico">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.0.0/animate.min.css"/>
   <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@100&display=swap" rel="stylesheet">
   <meta title="construcciones"> 
 </head>
@@ -17,7 +18,7 @@
     
     <nav class="navbar navbar-light bg-light">
       <a class="navbar-brand" href="https://www.instagram.com/kutz.construcciones/" target="_blank">
-        <img src="img/logos/logo-kutz-square30x30.jpg" width="" height="" alt="" loading="lazy">
+        <img class="animate__bounceOut" src="img/logos/logo-kutz-nav.jpg" width="30" height="45" alt="" loading="lazy">
       </a>
       
     <ul class="nav justify-content-end">
