--- a/obras.html
+++ b/obras.html
@@ -19,7 +19,7 @@
 	  
 	  <nav class="navbar navbar-light bg-light">
 		<a class="navbar-brand" href="https://www.instagram.com/kutz.construcciones/" target="_blank">
-		  <img src="img/logos/logo-kutz-square30x30.jpg" width="" height="" alt="" loading="lazy">
+			<img class="animate__bounceOut " src="img/logos/logo-kutz-nav.jpg" width="30" height="45" alt="" loading="lazy">
 		</a>
 		
 	  <ul class="nav justify-content-end">
@@ -45,8 +45,9 @@
 				<a href="O-L-102.html">
 				<img src="img/galeria/L102-00.jpg" class="card-img-top" alt="..."></a>
 				<div class="card-body">
+					<br>
 				  <h5 class="card-title">OBRA L-102</h5>
-				  <p class="card-text">CLICK EN LA IMAGEN PARA ACCEDER A LA GALERIA.</p>
+				  <h2 class="card-text">HACÉ CLICK EN LA IMAGEN.</h2>
 				</div>
 			  </div>
 			</div>
@@ -55,8 +56,9 @@
 				<a href="O-L-152.html">
 				<img src="img/galeria/L152-00.jpg" class="card-img-top" alt="..."></a>
 				<div class="card-body">
+					<br>
 				  <h5 class="card-title">OBRA L-152</h5>
-				  <p class="card-text">CLICK EN LA IMAGEN PARA ACCEDER A LA GALERIA.</p>
+				  <h2 class="card-text">HACÉ CLICK EN LA IMAGEN.</h2>
 				</div>
 			  </div>
 			</div>
@@ -65,8 +67,9 @@
 				<a href="O-L-170.html">
 				<img src="img/galeria/L170-00.jpg" class="card-img-top" alt="..."></a>
 				<div class="card-body">
+					<br>
 				  <h5 class="card-title">OBRA L-170</h5>
-				  <p class="card-text">CLICK EN LA IMAGEN PARA ACCEDER A LA GALERIA.</p>
+				  <h2 class="card-text">HACÉ CLICK EN LA IMAGEN.</h2>
 				</div>
 			  </div>
 			</div>
@@ -75,8 +78,9 @@
 				<a href="O-L-219.html">
 				<img src="img/galeria/L-219.jpg" class="card-img-top" alt="..."></a>
 				<div class="card-body">
+					<br>
 				  <h5 class="card-title">OBRA L-219</h5>
-				  <p class="card-text">CLICK EN LA IMAGEN PARA ACCEDER A LA GALERIA.</p>
+				  <h2 class="card-text">HACÉ CLICK EN LA IMAGEN.</h2>
 				</div>
 			  </div>
 			</div>
@@ -85,8 +89,9 @@
 				  <a href="O-L-134.html">
 				  <img src="img/galeria/L134-00.jpg" class="card-img-top" alt="..."></a>
 				  <div class="card-body">
+					<br>
 					<h5 class="card-title">OBRA L-134</h5>
-					<p class="card-text">CLICK EN LA IMAGEN PARA ACCEDER A LA GALERIA.</p>
+					<h2 class="card-text">HACÉ CLICK EN LA IMAGEN.</h2>
 				  </div>
 				</div>
 			  </div>
@@ -98,8 +103,9 @@
 				<a href="O-GR-01.html">
 				<img src="img/galeria/RG.jpg" class="card-img-top" alt="..."></a>
 				<div class="card-body">
+					<br>
 				  <h5 class="card-title">OBRA RG-01</h5>
-				  <p class="card-text">CLICK EN LA IMAGEN PARA ACCEDER A LA GALERIA.</p>
+				  <h2 class="card-text">HACÉ CLICK EN LA IMAGEN.</h2>
 				</div>
 			  </div>
 			</div>
@@ -108,8 +114,9 @@
 				<a href="O-G-01.html">
 				<img src="img/galeria/Gauna00.jpg" class="card-img-top" alt="..."></a>
 				<div class="card-body">
+					<br>
 				  <h5 class="card-title">OBRA GAUNA</h5>
-				  <p class="card-text">CLICK EN LA IMAGEN PARA ACCEDER A LA GALERIA.</p>
+				  <h2 class="card-text">HACÉ CLICK EN LA IMAGEN.</h2>
 				</div>
 			  </div>
 			</div>
@@ -118,8 +125,9 @@
 				<a href="O-L-23.html">
 				<img src="img/galeria/VZ-00.jpg" class="card-img-top" alt="..."></a>
 				<div class="card-body">
+					<br>
 				  <h5 class="card-title">OBRA VZ L-23</h5>
-				  <p class="card-text">CLICK EN LA IMAGEN PARA ACCEDER A LA GALERIA.</p>
+				  <h2 class="card-text">HACÉ CLICK EN LA IMAGEN.</h2>
 				</div>
 			  </div>
 			</div>
@@ -128,8 +136,9 @@
 				<a href="O-L-160.html">
 				<img src="img/galeria/L-160.jpg" class="card-img-top" alt="..."></a>
 				<div class="card-body">
+					<br>
 				  <h5 class="card-title">OBRA L-160</h5>
-				  <p class="card-text"> <span> CLICK EN LA IMAGEN PARA ACCEDER A LA GALERIA.</span></p>
+				  <h2 class="card-text">HACÉ CLICK EN LA IMAGEN.</h2>
 				</div>
 			  </div>
 			</div>
@@ -138,8 +147,9 @@
 				  <a href="O-L-147.html">
 				  <img src="img/galeria/L-147.jpg" class="card-img-top" alt="..."></a>
 				  <div class="card-body">
+					<br>
 					<h5 class="card-title">OBRA L-147</h5>
-					<p class="card-text"> <span> CLICK EN LA IMAGEN PARA ACCEDER A LA GALERIA.</span></p>
+					<h2 class="card-text">HACÉ CLICK EN LA IMAGEN.</h2>
 				  </div>
 				</div>
 			  </div>
