--- a/O-G-01.html
+++ b/O-G-01.html
@@ -43,6 +43,13 @@
 	</a>
   </div>
   <br>
+  <div class="container">
+	<div><h1>OBRA GAUNA</h1>
+	  <p>Obra ejecutada en Villa Ballester, San MArtin. Superficie 400m2 cubiertos totales, plazo de ejecución de obra 13 (trece) meses.</p>
+  </div>
+	
+  </div>
+  <br> 
 
 
 <header class="container-fluid">
