--- a/O-GR-01.html
+++ b/O-GR-01.html
@@ -41,7 +41,13 @@
 	</a>
   </div>
   <br>
-
+  <div class="container">
+	<div><h1>OBRA GR</h1>
+	  <p>Obra ejecutada en el barrio privado "Los Patricios" Bulogne. Superficie 305m2 cubiertos totales, plazo de ejecución de obra 13 (trece) meses.</p>
+  </div>
+	
+  </div>
+  <br> 
 
 <header class="container-fluid">
 	<ul class="row">
