--- a/O-L-134.html
+++ b/O-L-134.html
@@ -41,7 +41,13 @@
 	</a>
   </div>
   <br>
-
+  <div class="container">
+	<div><h1>OBRA L-134</h1>
+	  <p>Obra ejecutada en el barrio privado "San Ramiro" Pilar del Este. Superficie 132m2 cubiertos totales, plazo de ejecución de obra 9 (nueve) meses.</p>
+  </div>
+	
+  </div>
+  <br> 
 
 <header class="container-fluid">
 	<ul class="row">
