--- a/O-L-170.html
+++ b/O-L-170.html
@@ -42,8 +42,13 @@
 		</a>
 	  </div>
 	  <br>
-
-
+	  <div class="container">
+		<div><h1>OBRA L-170</h1>
+		  <p>Obra ejecutada en el barrio privado "Los Robles de Pilar". Superficie 169m2 cubiertos totales, plazo de ejecución de obra 12 (doce) meses.</p>
+	  </div>
+	</div>
+	<br> 
+	
 	<header class="container-fluid">
 		<ul class="row">
 			<div class="col d-flex justify-content-center d-flex align-items-center">
