--- a/O-L-23.html
+++ b/O-L-23.html
@@ -43,6 +43,14 @@
   </div>
   <br>
 
+  <div class="container">
+	<div><h1>OBRA MENDEZ</h1>
+	  <p>Obra ejecutada en el barrio privado "Valdevez", Ezeiza. Superficie 190m2 cubiertos totales, plazo de ejecución de obra 10 (diez) meses.</p>
+  </div>
+	
+  </div>
+  <br> 
+
 
 <header class="container-fluid">
 	<ul class="row">
