--- a/O-L-152.html
+++ b/O-L-152.html
@@ -65,7 +65,7 @@
 
 	<footer class="my-5 pt-5 text-muted text-center text-small">
 		<p class="mb-1">&copy; 2020 KUTZ Construcciones.</p>
-		<p class="mb-1">Designed by <a href="">ØNKEL</a> </p>
+		<p class="mb-1">Designed by <a href="https://www.instagram.com/onkel_prodigy2k/" target="_blank">ØNKEL</a></p>
 		
 	  </footer>
 	</div>
