--- a/O-L-134.html
+++ b/O-L-134.html
@@ -12,7 +12,7 @@
 </head>
 <body>
 		<div>
-			<h1 class="TituloHome">KUTZ CONSTRUCCIONES</h1>
+			<h2 class="TituloHome">K U T Z - CONSTRUCCIONES</h2>
 		</div>
 	
 	
