--- a/O-L-23.html
+++ b/O-L-23.html
@@ -13,7 +13,7 @@
 </head>
 <body>
 	<div>
-			<h1 class="TituloHome">KUTZ CONSTRUCCIONES</h1>
+		<h2 class="TituloHome">K U T Z - CONSTRUCCIONES</h2>
 		</div>
 		
 	
