--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
 </head>
 
   <body>
+    <div>
+      <h2 class="TituloHome">K U T Z - CONSTRUCCIONES</h2>
+      </div>
 
     
     <nav class="navbar navbar-light bg-light">
