--- a/obras.html
+++ b/obras.html
@@ -98,6 +98,17 @@
 				  </div>
 				</div>
 			  </div>
+			  <div class="col mb-4">
+				<div class="card">
+				  <a href="O-L-147.html">
+				  <img src="img/galeria/L-147.jpg" class="card-img-top" alt="..."></a>
+				  <div class="card-body">
+					<br>
+					<h5 class="card-title">OBRA L-147</h5>
+					<h2 class="card-text">HACÉ CLICK EN LA IMAGEN.</h2>
+				  </div>
+				</div>
+			  </div>
 		  </div>
 		 
 		  <div class="row row-cols-1 row-cols-md-3">
@@ -147,15 +158,27 @@
 			</div>
 			<div class="col mb-4">
 				<div class="card">
-				  <a href="O-L-147.html">
-				  <img src="img/galeria/L-147.jpg" class="card-img-top" alt="..."></a>
+				  <a href="O-CV-FRA.html">
+				  <img src="img/galeria/Fra.png" class="card-img-top" alt="..."></a>
 				  <div class="card-body">
-					<br>
-					<h5 class="card-title">OBRA L-147</h5>
+					  <br>
+					<h5 class="card-title">OBRA FRAGA</h5>
 					<h2 class="card-text">HACÉ CLICK EN LA IMAGEN.</h2>
 				  </div>
 				</div>
 			  </div>
+			  <div class="col mb-4">
+				<div class="card">
+				  <a href="O-CAS.html">
+				  <img src="img/galeria/Casa10.png" class="card-img-top" alt="..."></a>
+				  <div class="card-body">
+					  <br>
+					<h5 class="card-title">OBRA CASA-10</h5>
+					<h2 class="card-text">HACÉ CLICK EN LA IMAGEN.</h2>
+				  </div>
+				</div>
+			  </div>
+			
 
 			
 		  </div>
