--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
               <div class="card">
                 <img src="img/home/estructura.png" class="card-img-top" alt="hormigon armado">
                 <div class="card-body">
-                  <h5 class="card-title">ESTRUCTURAS DE HORMIGON ARMADO</h5>
+                  <h5 class="card-title">ESTRUCTURAS DE HORMIGON ARMADO.</h5>
                   <p class="card-text">Somos especialistas en ejecucion de estructuras de hormigon armado de gran envergadura.</p>
                   <p class="card-text"><small class="text-muted"></small></p>
                 </div>
