--- a/O-L-102.html
+++ b/O-L-102.html
@@ -44,7 +44,7 @@
   <br>
 <div class="container">
   <div><h1>OBRA L-102</h1>
-	<p>Obra ejecutada en el barrio privado "Los Robles de Pilar". Superficie 157m2 cubiertos totales, plazo de ejecución de obra 11 (once) meses.</p>
+	<p>Obra ejecutada en el barrio privado "Los Robles de Pilar". Superficie 157m2 cubiertos totales, plazo de ejecución de obra 8 (ocho) meses.</p>
 </div>
   
 </div>
