--- a/O-L-134.html
+++ b/O-L-134.html
@@ -43,7 +43,7 @@
   <br>
   <div class="container">
 	<div><h1>OBRA L-134</h1>
-	  <p>Obra ejecutada en el barrio privado "San Ramiro" Pilar del Este. Superficie 132m2 cubiertos totales, plazo de ejecución de obra 9 (nueve) meses.</p>
+	  <p>Obra ejecutada en el barrio privado "San Ramiro" Pilar del Este. Superficie 132m2 cubiertos totales, plazo de ejecución de obra 8 (ocho) meses.</p>
   </div>
 	
   </div>
