--- a/O-L-160.html
+++ b/O-L-160.html
@@ -44,7 +44,7 @@
 
   <div class="container">
 	<div><h1>OBRA L-160</h1>
-	  <p>Obra ejecutada en el barrio privado "San Ramiro" Pilar del Este. Superficie 132m2 cubiertos totales, plazo de ejecución de obra 9 (nueve) meses.</p>
+	  <p>Obra ejecutada en el barrio privado "San Ramiro" Pilar del Este. Superficie 132m2 cubiertos totales, plazo de ejecución de obra 8 (ocho) meses.</p>
   </div>
 	
   </div>
